--- a/client/templates/menu.html
+++ b/client/templates/menu.html
@@ -11,7 +11,7 @@
 
         <ion-content>
 
-            <h1>Bienvenue, {{user.firstname}}!</h1>
+            <h1>Bienvenue sur Nibs, {{user.firstname}}!</h1>
 
             <ion-list class="top-list">
 
