--- a/client/templates/menu.html
+++ b/client/templates/menu.html
@@ -74,6 +74,11 @@
                     Settings
                 </ion-item>
 
+                <ion-item nav-clear menu-close ui-sref="app.help" class="item-icon-left">
+                    <i class="icon ion-ios7-help"></i>
+                    New Feature
+                </ion-item>
+
             </ion-list>
 
         </ion-content>
